some initial bits on conda

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,9 @@ site_name: AlmaCookBook
 nav:
   - Home: 'index.md'
   - About: 'about.md'
+  - Conda:
+    - 'Overview': 'conda/overview.md'
+    - 'Basics': 'conda/basics.md'
   - Workflows:
     - 'Nextflow': 'workflows/nextflow.md'
 theme:
