--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,12 +8,15 @@ nav:
   - Workflows:
     - 'Singularity and docker': 'workflows/containers.md'
     - 'Nextflow': 'workflows/nextflow.md'
+  - FAQs:
+    - 'FAQs': 'faqs/faqs.md'
   - Training:
     - 'overview': 'training/overview.md'
     - 'python intro': 'https://icr-sc-training.github.io/intro-to-python/'  
 theme:
-  name: material
-  logo: assets/icr_svg_logo.svg
-  favicon: assets/icr_svg_logo.svg
+  name: material  
+  logo: assets/icr_svg_logo.svg  
+  favicon: assets/icr_svg_logo.svg  
   palette:
-    primary: white
+    primary: #8b0000  
+    accent: deep orange  
