--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,10 @@ nav:
   - Conda:
     - 'Overview': 'conda/overview.md'
     - 'Basics': 'conda/basics.md'
+  - OnDemand:
+    - 'Overview': 'ondemand/overview.md'
+    - 'Python JupyterNotebook': 'ondemand/jupyter.md'
+    - 'RStudio': 'ondemand/RStudio.md'
   - Workflows:  
     - NF-CORE:
       - 'nf-core 1: Install and test': 'workflows/nf-core-1.md'
