--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,8 +21,8 @@ nav:
   - FAQs:
     - 'FAQs': 'faqs/faqs.md'
   - Training:
-    - 'overview': 'training/overview.md'
     - 'python intro': 'https://almacookbook.github.io/intro-to-python/'  
+    - 'nextflow' : 'training/nextflow.md'
 theme:
   name: material  
   logo: assets/icr_svg_logo.svg  
