Added some more outlines

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,10 @@ nav:
   - About: 'about.md'
   - Good practices:
     - 'Continuous Integration': 'good/cicd.md'
+    - 'Version control': 'good/version.md'
     - 'Python good practices': 'good/python.md'
+    - 'Packaging and deploying': 'good/packaging.md'
+    - 'Using AI' : good/ai.md
   - Conda:
     - 'Overview': 'conda/overview.md'
     - 'Basics': 'conda/basics.md'
@@ -16,8 +19,6 @@ nav:
     - NF-CORE:
       - 'nf-core 1: Install and test': 'workflows/nf-core-1.md'
       - 'nf-core 2: Sarek': 'workflows/nf-core-2.md'
-    - Other:
-      - 'Nextflow': 'workflows/nextflow.md'
   - Containers:
       - 'Singularity and docker': 'workflows/containers.md'
   - IDEs:
@@ -28,7 +29,7 @@ nav:
   - Training:
     - 'python intro': 'https://almacookbook.github.io/intro-to-python/'
 theme:
-  name: material  
+  name: material
   logo: assets/icr_svg_logo.svg  
   favicon: assets/icr_svg_logo.svg  
   palette:
