--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ nav:
     - IDEs:
       - 'VSCode': 'ides/vscode.md'
       - 'remote-ssh': 'ides/remote.md'      
+    - HPC:
+      - 'Overview': 'good/hpc.md'      
   - Conda:
     - 'Overview': 'conda/overview.md'
     - 'Basics': 'conda/basics.md'
