--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,9 +5,14 @@ nav:
   - IDEs:
     - 'VSCode': 'ides/vscode.md'
     - 'remote-ssh': 'ides/remote.md'          
-  - Conda:
+  - Environments:
     - 'Overview': 'conda/overview.md'
     - 'Basics': 'conda/basics.md'
+    - 'Mamba/Conda the first time': 'conda/mamba-first.md'
+    - 'python scripts': 'conda/python-scripts.md'
+    - 'python jupyter ondemand': 'conda/python-ondemand.md'
+    - 'R scripts': 'conda/r-scripts.md'
+    - 'RStudio ondemand': 'conda/r-ondemand.md'
   - OnDemand:
     - 'Overview': 'ondemand/overview.md'
     - 'Python JupyterNotebook': 'ondemand/jupyter.md'
