--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,10 +15,10 @@ nav:
     - R:
       - R scripts: 'conda/r-scripts.md'
       - RStudio ondemand: 'conda/r-ondemand.md'
-  - OnDemand:
-    - 'Overview': 'ondemand/overview.md'
-    - 'Python JupyterNotebook': 'ondemand/jupyter.md'
-    - 'RStudio': 'ondemand/RStudio.md'
+  #- OnDemand:
+  #  - 'Overview': 'ondemand/overview.md'
+  #  - 'Python JupyterNotebook': 'ondemand/jupyter.md'
+  #  - 'RStudio': 'ondemand/RStudio.md'
   - Nextflow:
     - NF-CORE:
       - 'nf-core 1: Install and test': 'workflows/nf-core-1.md'
@@ -27,8 +27,8 @@ nav:
       - 'Singularity and docker': 'workflows/containers.md'  
   - FAQs:
     - 'FAQs': 'faqs/faqs.md'
-  - Training:
-    - 'python intro': 'https://almacookbook.github.io/intro-to-python/'
+  #- Training:
+  #  - 'python intro': 'https://almacookbook.github.io/intro-to-python/'
 theme:
   name: material
   logo: assets/icr_svg_logo.svg  
