--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,8 +18,8 @@ nav:
       - RStudio ondemand: 'conda/r-ondemand.md'  
   - Nextflow:
     - nextflow vs slurm: 'workflows/nextflow.md'  
-    - nf-core 1: Install and test: 'workflows/nf-core-1.md'  
-    - nf-core 2: Sarek: 'workflows/nf-core-2.md'  
+    - nf-core 1 Install and test: 'workflows/nf-core-1.md'  
+    - nf-core 2 Sarek: 'workflows/nf-core-2.md'  
   - Containers:
       - 'Singularity and docker': 'workflows/containers.md'  
   - FAQs:
