--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
       - R scripts: 'conda/r-scripts.md'
       - RStudio ondemand: 'conda/r-ondemand.md'  
   - Nextflow:
-    - nextflow vs slurm: 'workflows/nextflow.md'  
+    #- nextflow vs slurm: 'workflows/nextflow.md'  
     - nf-core 1 Install and test: 'workflows/nf-core-1.md'  
     - nf-core 2 Sarek: 'workflows/nf-core-2.md'  
   - Containers:
