--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
   - Environments:    
     - '1. Basics': 'conda/basics.md'
     - '2. Mamba/Conda the first time': 'conda/mamba-first.md'    
+    - '2. Mamba environments': 'conda/mamba-venvs.md'    
     - Python:      
       - python scripts: 'conda/python-scripts.md'
       - python jupyter ondemand: 'conda/python-ondemand.md'
