--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,17 +3,17 @@ nav:
   - Home: 'index.md'
   - About: 'about.md'
   - First Steps: 'first_steps.md'
-  - IDEs:
-    - 'VSCode': 'ides/vscode.md'
-    - 'remote-ssh': 'ides/remote.md'          
-  - Environments:    
-    - 'Basics': 'conda/basics.md'
-    - 'Mamba/Conda the first time': 'conda/mamba-first.md'    
-    - 'Mamba environments': 'conda/mamba-venvs.md'    
-    - Scientific tools:
+  - Scientific tools:
     - Overview: 'tools/overview.md'
     - Container tools: 'tools/container-tools.md'
     - Mamba tools: 'tools/mamba-tools.md'
+  - IDEs:
+    - 'VSCode': 'ides/vscode.md'
+    - 'remote-ssh': 'ides/remote.md'            
+  - Environments:    
+    - Basics: 'conda/basics.md'
+    - 'Mamba/Conda the first time': 'conda/mamba-first.md'    
+    - Mamba environments': 'conda/mamba-venvs.md'    
     - Python:      
       - python scripts: 'conda/python-scripts.md'
       - python jupyter ondemand: 'conda/python-ondemand.md'
