--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
     - Container tools: 'tools/container-tools.md'
     - Mamba tools: 'tools/mamba-tools.md'
   - Version Control:
-    - 'Git': 'vcs/gitlab.md'
+    - 'GitLab': 'vcs/gitlab.md'
     - 'GitHub': 'vcs/github.md'
   - IDEs:
     - 'VSCode': 'ides/vscode.md'
