--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
     - 'GitHub': 'vcs/github.md'
   - IDEs:
     - 'VSCode': 'ides/vscode.md'
+    - 'Campus program': 'ides/campus.md'
     - 'remote-ssh': 'ides/remote.md'            
   - Environments:    
     - Basics: 'conda/basics.md'
